[package]
name = "wasmuri-events"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "*"
wasm-bindgen = "0.2"
wasmuri-core = { path = "../core" }

[dependencies.web-sys]
version = "0.3"
features = [ "Event", "EventTarget", "HtmlElement", "KeyboardEvent", "MouseEvent", "WheelEvent", "ClipboardEvent", "Window" ]